Update composition in intermediary cache from all operations
Update composition in CacheProvider from all operations.
Replace AcDefinition with CompositionDto in CacheProvider.
Remove composition from MsgExecutor.

Issue-ID: POLICY-5668
Change-Id: I1353e1a59645fae30408c066d3a56d23956fca10
Signed-off-by: FrancescoFioraEst <francesco.fiora@est.tech>